# playwright-rust

./: Cargo.toml
examples/: field_extraction.rs
src/: api.rs  build.rs  imp.rs  lib.rs
src/api/: browser_context.rs  browser_type.rs  dialog.rs  element_handle.rs  frame.rs  locator.rs  page.rs  playwright.rs  route.rs
src/imp/: browser.rs  browser_context.rs  browser_type.rs  element_handle.rs  file_hooser.rs  frame.rs  locator.rs  page.rs  playwright.rs  request.rs  response.rs  selectors.rs  stream.rs  utils.rs  websocket.rs
src/imp/core/: connection.rs  driver.rs  message.rs  remote_object.rs  transport.rs
src/imp/core/message/: de.rs  ser.rs
tests/: locator_basic.rs  test.rs
tests/browser_context/: mod.rs
tests/devices/: mod.rs
tests/page/: mod.rs
tests/selectors/: mod.rs
